--- a/src/app/users/users.component.css
+++ b/src/app/users/users.component.css
@@ -6,3 +6,12 @@ th, td {
 }
 
 
+.roseirie-background {
+    background-color: #09BBF0;
+  }
+
+.handle-img-icon{
+    height: 60px;
+    width: 50px;
+
+}
