--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -40,6 +40,10 @@
                     <i class="fa-regular fa-user p-1"></i>
                     <span class="ms-1">All users</span>
                 </a>
+                <a class="list-group-item list-group-item-action " routerLink="/edit" routerLinkActive="active-link">
+                    <i class="fa-regular fa-user p-1"></i>
+                    <span class="ms-1">Edit User</span>
+                </a>
                 <a style="cursor: pointer;" class="list-group-item list-group-item-action " (click)="logout()"
                     routerLinkActive="active-link">
                     <i class="fa-solid fa-outdent p-1"></i>
@@ -50,8 +54,8 @@
         </div>
 
         <!-- Page Content -->
-        <div id="page-content-wrapper">
-            <router-outlet></router-outlet>
-        </div>
+<div id="page-content-wrapper" style="min-height: 100vh;">
+    <router-outlet></router-outlet>
+</div>
     </div>
 </div>
